--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@styled-icons/fluentui-system-filled": "^10.33.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
