--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@styled-icons/bootstrap": "^10.33.0",
     "@styled-icons/fluentui-system-filled": "^10.33.0",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
