--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
