--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-calendar": "^3.4.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-ionicons": "^4.2.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
